--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = uriparser . t util m4
 
-doc_DATA = README.md LICENSE-2.0 \
+doc_DATA = README.md LICENSE-2.0 TODO \
 	liburi.3.html \
 	uri_create_str.3.html uri_create_uri.3.html uri_destroy.3.html \
 	uri_scheme.3.html
