LIBURI-3: Add liburi-config

--- a/util/Makefile.am
+++ b/util/Makefile.am
@@ -12,6 +12,7 @@
 ##  See the License for the specific language governing permissions and
 ##  limitations under the License.
 
-bin_PROGRAMS = uriparse
+bin_PROGRAMS = uriparse liburi-config
 
 uriparse_LDADD = ../liburi.la
+
