--- a/configure.ac
+++ b/configure.ac
@@ -19,7 +19,8 @@ AM_MAINTAINER_MODE
 
 AC_CONFIG_HEADER([config.h])
 
-AC_PROG_CC
+BT_PROG_XCODE
+AC_PROG_CC([clang gcc c99 cc])
 AC_PROG_CC_C99
 AC_PROG_CXX
 AC_HEADER_STDC
