Cope better when used within a project which doesn't itself use libtool

--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,7 @@
 
 AC_INIT([liburi],[master])
 AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_AUX_DIR([.])
 AM_INIT_AUTOMAKE([foreign])
 AM_MAINTAINER_MODE
 
