--- a/configure.ac
+++ b/configure.ac
@@ -25,7 +25,7 @@ AC_PROG_CC([clang gcc c99 cc])
 AC_PROG_CC_C99
 AC_PROG_CXX
 AC_HEADER_STDC
-AC_PROG_LIBTOOL
+LT_INIT
 
 BT_PROG_CC_WARN
 BT_DEFINE_PREFIX
