--- a/liburi.pc.in
+++ b/liburi.pc.in
@@ -4,6 +4,7 @@ libdir=@libdir@
 includedir=@includedir@
 
 Name: @PACKAGE_NAME@
+Description: @PACKAGE_DESC@
 URL: @PACKAGE_URL@
 Version: @PACKAGE_VERSION@
 Libs: -L${libdir} -luri
